--- a/style2.css
+++ b/style2.css
@@ -12,6 +12,7 @@ body{
     width: 410px;
     height: 385px;
     margin: auto;
+    margin-top: 50px;
     padding: 4px 4px;
     border-radius: 5px;
 }
@@ -38,8 +39,9 @@ body{
 .inner_cont{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 100%;
-    height: 200px;
+    height: 240px;
 }
 
 #font_opts{
@@ -48,9 +50,13 @@ body{
 }
 
 .opts{
-    background-color: aquamarine;
-    width: 40px;
+    width: 123px;
     height: 40px;
+}
+
+.input_field{
+    display: flex;
+    flex-direction: column;
 }
 
 #txt_decor{
@@ -74,7 +80,7 @@ body{
     width: 40%;
 }
 #preview_cont{
-    width: 59%;
+    width: 58%;
 }
 #preview_fielset{
     height: 64px;
@@ -85,4 +91,12 @@ body{
 }
 #tab-A{
     height: 245px;
+}
+.options{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer_btn{
+    float: right;
 }
