--- a/style1.css
+++ b/style1.css
@@ -1,19 +1,25 @@
+@import url(//db.onlinewebfonts.com/c/794e572cce05ab25cdc31a0d3368c829?family=MrEavesXLModNarOT-Heavy);
+
+@font-face {font-family: "MrEavesXLModNarOT-Heavy"; src: url("//db.onlinewebfonts.com/t/794e572cce05ab25cdc31a0d3368c829.eot"); src: url("//db.onlinewebfonts.com/t/794e572cce05ab25cdc31a0d3368c829.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/794e572cce05ab25cdc31a0d3368c829.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/794e572cce05ab25cdc31a0d3368c829.woff") format("woff"), url("//db.onlinewebfonts.com/t/794e572cce05ab25cdc31a0d3368c829.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/794e572cce05ab25cdc31a0d3368c829.svg#MrEavesXLModNarOT-Heavy") format("svg"); }
+
+
 body{
     margin: 0px 0px;
     padding: 0px 0px;
     box-sizing: border-box;
+    
 }
 
 
 .container {
     background-color: #005BF2;
     width: 350px;
-    height: 215px;
+    height: 213px;
     top: 120px;
     left: 545px;
     padding: 4px 4px;
     border-radius: 5px;
-    margin: 50px auto;
+    margin:50px auto;
 }
 
 .upper_options{
@@ -25,6 +31,7 @@ body{
     align-items: center;
     background-color: #005BF2;
     color: white;
+    padding-bottom: 2px;
 }
 
 .lower_options{
@@ -59,8 +66,9 @@ body{
     background-color: #E45E3A;
 }
 #modal_name{
-    font-size: medium;
-    font-weight: 500;
+    font-family:  "MrEavesXLModNarOT";
+    font-size: bold;
+    font-size: 15px;
 }
 .wrapper_left {
     padding: 5px 5px;
@@ -69,11 +77,12 @@ body{
 
 .heading_txt_area{
     color: black;
-
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .txt_area{
     width: 100%;
+    height: 125px;
 }
 
 .close_btn_txt_area{
@@ -102,4 +111,9 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+}
+
+#text21{
+    width: 100%;
+    height: 125px;
 }
