--- a/style1.css
+++ b/style1.css
@@ -14,29 +14,30 @@ body{
 .container {
     background-color: #005BF2;
     width: 350px;
-    height: 213px;
+    height: 208px;
     top: 120px;
     left: 545px;
-    padding: 4px 4px;
+    padding: 6px 4px;
     border-radius: 5px;
     margin:50px auto;
 }
 
 .upper_options{
     height: 10%;
-    width: 100%;
+    width: 345px;
+    margin: auto;
     display: flex;
     justify-content: space-between;
     align-content: center;
     align-items: center;
     background-color: #005BF2;
     color: white;
-    padding-bottom: 2px;
+    padding-bottom: 4px;
 }
 
 .lower_options{
     width: 100%;
-    height: 90%;
+    height: 89%;
     background-color: #ECE9D8;
 }
 
@@ -71,6 +72,7 @@ body{
     font-size: 15px;
 }
 .wrapper_left {
+    height: 165px;
     padding: 5px 5px;
     width: 255px;
 }
@@ -96,6 +98,7 @@ body{
 
 }
 .wrapper_right{
+    height: 165px;
     padding: 5px;
     display: flex;
     flex-direction: column;
@@ -116,4 +119,13 @@ body{
 #text21{
     width: 100%;
     height: 125px;
+}
+
+.close_btn_txt_area{
+    border: 1px solid #80c2ff;
+    border-radius: 1px;
+}
+
+.underLnBtn{
+    text-decoration: underline;
 }
